--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Grow a Garden Pet Selector</title>
-  <style>
+<title>Roblox</title>
+<link rel="icon" type="image/png" href="new-roblox-logo-991228798-removebg-preview.png">
+<style>
     @import url('https://fonts.googleapis.com/css2?family=Fredoka+One:wght@400&family=Comic+Neue:wght@400;700&display=swap');
     
     body {
@@ -625,4 +626,5 @@ const pets = {
   </script>
 </body>
 </html>
+
 
