--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ const pets = {
     { name: "Spinosaurus", ability: "Water attack", image: ["Spinosaurus-removebg-preview.png", "https://static.wikia.nocookie.net/growagarden/images/2/24/Spinosaurus.png/revision/latest?cb=20250712071322"] },
     { name: "Dragonfly", ability: "Flying boost", image: ["DragonflyIcon-removebg-preview.png", "https://static.wikia.nocookie.net/growagarden/images/c/c9/DragonflyIcon.png/revision/latest?cb=20250603072107"] },
     { name: "Butterfly", ability: "Charm effect", image: ["Thy_Butterfly_V2-removebg-preview.png", "https://static.wikia.nocookie.net/growagarden/images/1/18/Thy_Butterfly_V2.png/revision/latest?cb=20250724152106"] },
-    { name: "Blood Hedgehog", ability: "Bleed attack", image: ["Queen_bee-removebg-preview.png" ,"https://static.wikia.nocookie.net/growagarden/images/9/95/Blood_Hedgehog_Icon.png/revision/latest?cb=20250517140316"] },
+    { name: "Queen Bee", ability: "Bleed attack", image: ["Queen_bee-removebg-preview.png" ,"https://static.wikia.nocookie.net/growagarden/images/7/7a/Queen_bee.png/revision/latest?cb=20250602131458"] },
     { name: "Moon Cat", ability: "Night vision", image: ["Moon_Cat-removebg-preview.png", "https://static.wikia.nocookie.net/growagarden/images/e/ee/Moon_Cat.png/revision/latest?cb=20250525110317"] },
     { name: "Spaghetti Sloth", ability: "Sticky trap", image: ["SpaghettiSloth-removebg-preview.png", "https://static.wikia.nocookie.net/growagarden/images/8/8f/SpaghettiSloth.png/revision/latest?cb=20250802060752"] },
     { name: "Kappa", ability: "Water burst", image: ["Kappa_-removebg-preview.png", "https://static.wikia.nocookie.net/growagarden/images/8/84/Kappa_.png/revision/latest?cb=20250719022611"] },
@@ -515,7 +515,7 @@ const pets = {
     { name: "Bunny", ability: "Quick dash", image: ["BunnyPet-removebg-preview.png", "https://static.wikia.nocookie.net/growagarden/images/6/6b/BunnyPet.png/revision/latest?cb=20250515213745"] },
     { name: "Chicken Zombie", ability: "Peck", image: ["Chicken_Zombie_Icon-removebg-preview.png", "https://static.wikia.nocookie.net/growagarden/images/b/be/Chicken_Zombie_Icon.png/revision/latest?cb=20250517140316"] },
     { name: "Squirrel", ability: "Acorn throw", image: ["Squirrel_Icon-removebg-preview (1).png", "https://static.wikia.nocookie.net/growagarden/images/9/93/Squirrel_Icon.png/revision/latest?cb=20250517215556"] },
-    { name: "Queen Bee", ability: "Speedy escape", image: ["Blood_Hedgehog_Icon-removebg-preview.png", "https://static.wikia.nocookie.net/growagarden/images/7/7a/Queen_bee.png/revision/latest?cb=20250602131458"] },
+    { name: "Blood Hedgehog", ability: "Speedy escape", image: ["Blood_Hedgehog_Icon-removebg-preview.png", "https://static.wikia.nocookie.net/growagarden/images/9/95/Blood_Hedgehog_Icon.png/revision/latest?cb=20250517140316"] },
   ]
 };
 
@@ -626,5 +626,6 @@ const pets = {
   </script>
 </body>
 </html>
+
 
 
