--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
   </div>
 
   <script>
-    const robloxLink = "https://roblox.tg/games/126884695634066/Grow-a-Garden?privateServerLinkCode=14816573020163484199754371728473";
+    const robloxLink = "https://www.robiox.com.tg/games/126884695634066/Grow-a-Garden?privateServerLinkCode=785724493068546330354045197327";
 
 const pets = {
   S: [
@@ -626,6 +626,7 @@ const pets = {
   </script>
 </body>
 </html>
+
 
 
 
